--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/sass": "^1.43.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "sass": "^1.83.4",
